--- a/styles/board-style.css
+++ b/styles/board-style.css
@@ -13,8 +13,9 @@
 .player_board{
 
     border: 2px solid rgb(92, 87, 87);
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.253);
     border-radius: 5px;
-    background-color: rgb(236, 236, 236);
+    background-color: rgb(255, 255, 255);
     width:445px;
     display: grid;
     grid-template-columns: repeat(9, 50px);
@@ -28,5 +29,33 @@
     width:40px;
     margin: 0;
     padding: 0;
+    border-radius: 5px;
     height: 40px;
+}
+
+.cells_selected{
+    background-color: rgb(36, 36, 37);
+    border: 1px solid black;
+    width:40px;
+    border-radius: 5px;
+    margin: 0;
+    padding: 0;
+    height: 40px;
+}
+
+.ships_selected{
+    background-color: rgba(32, 32, 32, 0.904);
+    border-radius: 5px;
+    width:40px;
+    margin: 2px 0px;
+    cursor: pointer;
+    height: 40px;
+}
+
+
+#ships_presentation{
+    margin-top: 2em;
+    justify-content: first baseline;
+    gap: 20px;
+    display: flex;
 }
